--- a/ACL4SSR_Mini_MultiMode.ini
+++ b/ACL4SSR_Mini_MultiMode.ini
@@ -9,30 +9,30 @@
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
 
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-;ruleset=🎯 全球直连,[]GEOIP,LAN
-ruleset=🎯 全球直连,[]GEOIP,CN
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🛑 Global Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🛑 Global Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=🚀 Node Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🚀 Node Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🚀 Node Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
+ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+;ruleset=🎯 Global Direct Connection,[]GEOIP,LAN
+ruleset=🎯 Global Direct Connection,[]GEOIP,CN
+ruleset=🐟 Other,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]🔮 负载均衡`[]🔯 故障转移`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`180
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🚀 Node Selection`select`[]🔮 Failover`[]🔯 Load Balancing`[]♻️ Automatic`[]DIRECT`.*
+custom_proxy_group=🔮 Load Balancing`load-balance`.*`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🔯 Failover`fallback`.*`http://www.gstatic.com/generate_204`180
+custom_proxy_group=♻️ Automatic`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🔯 故障转移`.*
+custom_proxy_group=🎯 Global Direct Connection`select`[]DIRECT`[]🚀 Node Selection`[]♻️ Automatic
+custom_proxy_group=🛑 Global Interception`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 Other`select`[]🚀 Node Selection`[]🎯 Global Direct Connection`[]♻️ Automatic`[]🔯 Load Balancing`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
