--- a/ACL4SSR_Mini_MultiMode.ini
+++ b/ACL4SSR_Mini_MultiMode.ini
@@ -9,30 +9,30 @@
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
 
-ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🛑 Global Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🛑 Global Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🛑 Global_Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🛑 Global_Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🚀 Node Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀 Node Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 Node Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯 Global Direct Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-;ruleset=🎯 Global Direct Connection,[]GEOIP,LAN
-ruleset=🎯 Global Direct Connection,[]GEOIP,CN
+ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+;ruleset=🎯 Global_Direct_Connection,[]GEOIP,LAN
+ruleset=🎯 Global_Direct_Connection,[]GEOIP,CN
 ruleset=🐟 Other,[]FINAL
 
-custom_proxy_group=🚀 Node Selection`select`[]🔮 Failover`[]🔯 Load Balancing`[]♻️ Automatic`[]DIRECT`.*
-custom_proxy_group=🔮 Load Balancing`load-balance`.*`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🚀 Node_Selection`select`[]🔮 Failover`[]🔯 Load_Balancing`[]♻️ Automatic`[]DIRECT`.*
+custom_proxy_group=🔮 Load_Balancing`load-balance`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🔯 Failover`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=♻️ Automatic`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎯 Global Direct Connection`select`[]DIRECT`[]🚀 Node Selection`[]♻️ Automatic
-custom_proxy_group=🛑 Global Interception`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 Other`select`[]🚀 Node Selection`[]🎯 Global Direct Connection`[]♻️ Automatic`[]🔯 Load Balancing`.*
+custom_proxy_group=🎯 Global_Direct_Connection`select`[]DIRECT`[]🚀 Node Selection`[]♻️ Automatic
+custom_proxy_group=🛑 Global_Interception`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 Other`select`[]🚀 Node Selection`[]🎯 Global_Direct_Connection`[]♻️ Automatic`[]🔯 Load_Balancing`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
