--- a/ACL4SSR_Mini_MultiMode.ini
+++ b/ACL4SSR_Mini_MultiMode.ini
@@ -25,14 +25,14 @@ ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/
 ruleset=🎯 Global_Direct_Connection,[]GEOIP,CN
 ruleset=🐟 Other,[]FINAL
 
-custom_proxy_group=🚀 Node_Selection`select`[]🔮 Failover`[]🔯 Load_Balancing`[]♻️ Automatic`[]DIRECT`.*
+custom_proxy_group=🚀 Node_Selection`select`[]🔮 Load_Balancing`[]🔯 Failover`[]♻️ Automatic`[]DIRECT`.*
 custom_proxy_group=🔮 Load_Balancing`load-balance`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🔯 Failover`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=♻️ Automatic`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🎯 Global_Direct_Connection`select`[]DIRECT`[]🚀 Node Selection`[]♻️ Automatic
 custom_proxy_group=🛑 Global_Interception`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 Other`select`[]🚀 Node Selection`[]🎯 Global_Direct_Connection`[]♻️ Automatic`[]🔯 Load_Balancing`.*
+custom_proxy_group=🐟 Other`select`[]🚀 Node Selection`[]🎯 Global_Direct_Connection`[]♻️ Automatic`[]🔯 Failover`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
