--- a/ACL4SSR_Mini_MultiMode.ini
+++ b/ACL4SSR_Mini_MultiMode.ini
@@ -15,9 +15,9 @@ ruleset=🛑 Global_Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4S
 ruleset=🛑 Global_Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🚀 Node Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🚀 Node Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🚀 Node Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
+ruleset=🚀 Node_Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🚀 Node_Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🚀 Node_Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
@@ -30,9 +30,9 @@ custom_proxy_group=🔮 Load_Balancing`load-balance`.*`http://www.gstatic.com/ge
 custom_proxy_group=🔯 Failover`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=♻️ Automatic`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎯 Global_Direct_Connection`select`[]DIRECT`[]🚀 Node Selection`[]♻️ Automatic
+custom_proxy_group=🎯 Global_Direct_Connection`select`[]DIRECT`[]🚀 Node_Selection`[]♻️ Automatic
 custom_proxy_group=🛑 Global_Interception`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 Other`select`[]🚀 Node Selection`[]🎯 Global_Direct_Connection`[]♻️ Automatic`[]🔯 Failover`.*
+custom_proxy_group=🐟 Other`select`[]🚀 Node_Selection`[]🎯 Global_Direct_Connection`[]♻️ Automatic`[]🔯 Failover`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
