--- a/ACL4SSR_Mini_MultiMode.ini
+++ b/ACL4SSR_Mini_MultiMode.ini
@@ -1,13 +1,4 @@
 [custom]
-;不要随意改变关键字，否则会导致出错
-;acl4SSR规则-在线版
-
-;去广告：支持
-;自动测速：支持
-;微软分流：不支持
-;苹果分流：不支持
-;增强中国IP段：不支持
-;增强国外GFW：不支持
 
 ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -25,9 +16,9 @@ ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/
 ruleset=🎯 Global_Direct_Connection,[]GEOIP,CN
 ruleset=🐟 Other,[]FINAL
 
-custom_proxy_group=🔯 Failover`fallback`.*`http://www.gstatic.com/generate_204`180
-custom_proxy_group=🔮 Load_Balancing`load-balance`.*`http://www.gstatic.com/generate_204`180
-custom_proxy_group=♻️ Automatic`url-test`.*`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🔯 Failover`fallback`.*`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🔮 Load_Balancing`load-balance`.*`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=♻️ Automatic`url-test`.*`http://cp.cloudflare.com/generate_204`300,50
 custom_proxy_group=🚀 Node_Selection`select`[]🔮 Load_Balancing`[]🔯 Failover`[]♻️ Automatic`[]DIRECT`.*
 custom_proxy_group=🎯 Global_Direct_Connection`select`[]DIRECT`[]🚀 Node_Selection`[]♻️ Automatic
 custom_proxy_group=🛑 Global_Interception`select`[]REJECT`[]DIRECT
