--- a/ACL4SSR_Mini_MultiMode.ini
+++ b/ACL4SSR_Mini_MultiMode.ini
@@ -21,7 +21,7 @@ custom_proxy_group=🔯 Failover`fallback`.*`http://cp.cloudflare.com/generate_2
 custom_proxy_group=🔮 Load_Balancing`load-balance`.*`http://cp.cloudflare.com/generate_204`180
 custom_proxy_group=♻️ Automatic`url-test`.*`http://cp.cloudflare.com/generate_204`300,50
 custom_proxy_group=🚀 Node_Selection`select`[]🔮 Load_Balancing`[]🔯 Failover`[]♻️ Automatic`[]DIRECT`.*
-custom_proxy_group=🚀 OpenAI`select`[]🔮 Load_Balancing`[]🔯 Failover`[]♻️ Automatic`[]DIRECT`.*
+custom_proxy_group=🚀 OpenAI`select`[]🚀 Node_Selection`.*
 custom_proxy_group=🎯 Global_Direct_Connection`select`[]DIRECT
 custom_proxy_group=🛑 Global_Interception`select`[]REJECT
 custom_proxy_group=🐟 Other`select`[]🚀 Node_Selection`[]🎯 Global_Direct_Connection`[]♻️ Automatic`[]🔮 Load_Balancing
