--- a/ACL4SSR_Mini_MultiMode.ini
+++ b/ACL4SSR_Mini_MultiMode.ini
@@ -7,6 +7,7 @@ ruleset=🛑 Global_Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4S
 ruleset=🛑 Global_Interception,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 Global_Direct_Connection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=🚀 Node_Selection,https://raw.githubusercontent.com/Byelliot/ACL4SSR/refs/heads/main/Artstation.list
 ruleset=🚀 Node_Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀 Node_Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 Node_Selection,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
